crates/apollo-compiler/test_data/diagnostics/0038_object_type_with_undefined_field_type.txt
Error: cannot find type `Url` in this document
   ╭─[0038_object_type_with_undefined_field_type.graphql:3:8]
   │
 3 │   img: Url
   │        ─┬─  
   │         ╰─── not found in this scope
───╯
Error: cannot find type `Person` in this document
   ╭─[0038_object_type_with_undefined_field_type.graphql:4:17]
   │
 4 │   relationship: Person
   │                 ───┬──  
   │                    ╰──── not found in this scope
───╯

